--- a/_config/binding.yml
+++ b/_config/binding.yml
@@ -1,5 +1,5 @@
-Injector:
-  RequestProcessor:
+SilverStripe\Core\Injector:
+  SilverStripe\Control\RequestProcessor:
     properties:
       filters:
         - '%$SearchUpdater_BindManipulationCaptureFilter'
