--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,3 +1,3 @@
-DataObject:
+SilverStripe\ORM\DataObject:
   extensions:
-    - 'SearchUpdater_ObjectHandler'
+    - 'SilverStripe\FullTextSearch\Search\SearchUpdater_ObjectHandler'
