--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "~3.1",
-        "monolog/monolog": "~1.15"
+	"silverstripe/framework": "^4@dev",
+        "monolog/monolog": "~1.15",
+	"php": ">=5.6.0"
     },
     "require-dev": {
-        "silverstripe/cms": "~3.1",
+	"silverstripe/cms": "^4@dev",
         "hafriedlander/silverstripe-phockito": "*"
     },
     "extra": {
@@ -34,6 +35,12 @@
     },
     "suggest": {
         "silverstripe/fulltextsearch-localsolr": "Adds a ready-to-use local Solr server for initial development"
+    },
+    "autoload": {
+	"psr-4": {
+	    "SilverStripe\\FullTextSearch\\": "src/"
+	},
+	"classmap": ["thirdparty/solr-php-client/Apache/Solr/"]
     },
     "minimum-stability": "dev",
     "license": "BSD-3-Clause"
